# XrayPhysics

./: .gitignore  CMakeLists.txt  pixi.toml  pyproject.toml  recipe.yaml
src/: dual_energy_decomposition.cpp  xrayphysics.h  xrayphysics.py  xrayphysics_c_interface.h
