[project]
name = "xrayphysics"
version = "1.2.1"
description = "X-ray cross-sections, source spectra modeling, multi-material beam hardening correction, and dual energy decomposition algorithms"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kyle Champley", email = "champley@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []
import-name = ["xrayphysics"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/kylechampley/XrayPhysics"
Documentation = "https://xrayphysics.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/kylechampley/XrayPhysics/issues"
Discussions = "https://github.com/kylechampley/XrayPhysics/discussions"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"